--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "browserslist":[
+    "last 2 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.8.7"
+    "@babel/polyfill": "^7.8.7",
+    "browserslist": "^4.9.1",
+    "postcss-preset-env": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
@@ -28,8 +37,19 @@
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jsxobj": "^1.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
