--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config webpack.config.js -d",
+    "build": "rimraf dist/ && webpack --config webpack.config.js -p"
   },
   "keywords": [],
-  "browserslist":[
+  "browserslist": [
     "last 2 version",
     "> 1%",
     "maintained node versions",
@@ -30,6 +31,7 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-loader": "^3.0.3",
