--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
@@ -49,6 +50,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
