--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js -d",
-    "build": "rimraf dist/ && webpack --config webpack.config.js -p"
+    "start": "cross-env NODE_ENV=developmennt webpack-dev-server --config webpack.config.js -d",
+    "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --config webpack.config.js -p"
   },
   "keywords": [],
   "browserslist": [
@@ -30,6 +30,7 @@
     "babel-loader": "^8.0.6",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
