--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=developmennt webpack-dev-server --config webpack.config.js -d",
-    "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --config webpack.config.js -p"
+    "start": "cross-env NODE_ENV=developmennt webpack-dev-server --mode development --config webpack.config.js",
+    "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "browserslist": [
@@ -44,6 +44,7 @@
     "jsxobj": "^1.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
