--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=developmennt webpack-dev-server --mode development --config webpack.config.js",
+    "start": "npx nodemon",
     "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
