--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "startWebPack":"cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js",
-    "start": "concurrently \"npx nodemon\" \"npm run startWebPack\"",
+    "start": "concurrently \"npx nodemon webpack.config.js\" \"npm run startWebPack\"",
     "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
