--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "startWebPack":"cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js",
+    "startWebPack": "cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js",
     "start": "concurrently \"npx nodemon webpack.config.js\" \"npm run startWebPack\"",
     "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js"
   },
@@ -27,9 +27,12 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "@types/node": "^13.9.1",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "babel-preset-minify": "^0.5.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
@@ -55,6 +58,9 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
