--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "startWebPack":"cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js",
+    "startWebPack": "cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.js",
     "start": "concurrently \"npx nodemon webpack.config.js\" \"npm run startWebPack\"",
-    "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack.config.js"
+    "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.config.js"
   },
   "keywords": [],
   "browserslist": [
@@ -21,17 +21,21 @@
     "@babel/polyfill": "^7.8.7",
     "browserslist": "^4.9.1",
     "concurrently": "^5.1.0",
-    "postcss-preset-env": "^6.7.0"
+    "gsap": "^3.2.6",
+    "postcss-preset-env": "^6.7.0",
+    "scrollmagic": "^2.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "cross-env": "^7.0.2",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
@@ -40,6 +44,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -48,16 +53,23 @@
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.30",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-modules": "^2.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "rimraf": "^3.0.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^3.0.1",
+    "tslib": "^2.0.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-notifier": "^1.8.0"
   }
 }
