--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "ESLint",
   "main": "index.js",
   "scripts": {
-    "startWebPack": "cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.js",
-    "start": "concurrently \"npx nodemon webpack.config.js\" \"npm run startWebPack\"",
+    "start": "rimraf dist/ && cross-env NODE_ENV=development webpack-dev-server --mode development --config webpack/webpack.config.js",
     "build": "rimraf dist/ && cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.config.js"
   },
   "keywords": [],
